--- a/docs/howtos/solutions/microservices/api-gateway-caching/index-api-gateway-caching.mdx
+++ b/docs/howtos/solutions/microservices/api-gateway-caching/index-api-gateway-caching.mdx
@@ -58,6 +58,8 @@ Use a **Redis Enterprise Cluster** to get the benefit of linear scaling to ensur
 
 <MicroservicesEcommerceDesign />
 
+<SourceCode />
+
 ## API gateway caching in a microservices application with Redis and MongoDB
 
 What's nice about a microservice architecture is that each service is set up so it can scale independently. Now, seeing as how each service might require authentication, you likely want to obtain session information for most requests. Therefore, it makes sense to use the API gateway to cache and retrieve session information and to subsequently pass the information on to each service. Let's see how you might accomplish this.
@@ -207,9 +209,11 @@ To learn more about Redis, check out the additional resources below:
 
 ### Additional resources
 
-- [CQRS](/howtos/solutions/microservices/cqrs)
-- [Interservice communication](/howtos/solutions/microservices/interservice-communication)
-- [Query caching](/howtos/solutions/microservices/caching)
+- Microservices with Redis
+  - [CQRS](/howtos/solutions/microservices/cqrs)
+  - [Interservice communication](/howtos/solutions/microservices/interservice-communication)
+  - [Query caching](/howtos/solutions/microservices/caching)
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
+- [Try Redis Enterprise for free](https://redis.com/try-free/)
