--- a/docs/howtos/solutions/microservices/caching/index-caching.mdx
+++ b/docs/howtos/solutions/microservices/caching/index-caching.mdx
@@ -97,6 +97,8 @@ If you use **Redis Enterprise** and a database that uses a JDBC driver, you can 
 
 <MicroservicesEcommerceDesign />
 
+<SourceCode />
+
 ## Caching in a microservices application with Redis and MongoDB
 
 In our sample application, the products service publishes an API for filtering products. Here's what a call to the API looks like:
@@ -283,9 +285,11 @@ You now know how to use Redis for caching with one of the most common caching pa
 
 ### Additional resources
 
-- [CQRS](/howtos/solutions/microservices/cqrs)
-- [Interservice communication](/howtos/solutions/microservices/interservice-communication)
-- [API gateway caching](/howtos/solutions/microservices/api-gateway-caching)
+- Microservices with Redis
+  - [CQRS](/howtos/solutions/microservices/cqrs)
+  - [Interservice communication](/howtos/solutions/microservices/interservice-communication)
+  - [API gateway caching](/howtos/solutions/microservices/api-gateway-caching)
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
+- [Try Redis Enterprise for free](https://redis.com/try-free/)
