--- a/docs/howtos/solutions/microservices/cqrs/index-cqrs.mdx
+++ b/docs/howtos/solutions/microservices/cqrs/index-cqrs.mdx
@@ -88,6 +88,8 @@ Let's look at some sample code that helps facilitate the CQRS pattern with Redis
 
 <MicroservicesEcommerceDesign />
 
+<SourceCode />
+
 ## Building a CQRS microservices application with Redis and MongoDB
 
 Let's look at the sample code for the `order service` and see the `CreateOrder` command (a write operation). Then we look at the `order history service` to see the `ViewOrderHistory` command (a read operation).
@@ -331,9 +333,11 @@ Hopefully, this tutorial has helped you visualize how to use Redis with the CQRS
 
 ### Additional resources
 
-- [Interservice communication](/howtos/solutions/microservices/interservice-communication)
-- [Query caching](/howtos/solutions/microservices/caching)
-- [API gateway caching](/howtos/solutions/microservices/api-gateway-caching)
+- Microservices with Redis
+  - [Interservice communication](/howtos/solutions/microservices/interservice-communication)
+  - [Query caching](/howtos/solutions/microservices/caching)
+  - [API gateway caching](/howtos/solutions/microservices/api-gateway-caching)
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
+- [Try Redis Enterprise for free](https://redis.com/try-free/)
