--- a/docs/howtos/solutions/microservices/interservice-communication/index-interservice-communication.mdx
+++ b/docs/howtos/solutions/microservices/interservice-communication/index-interservice-communication.mdx
@@ -146,6 +146,8 @@ Let's outline the streams and events used below:
 
 <MicroservicesEcommerceDesign />
 
+<SourceCode />
+
 ## Building an interservice communication application with Redis and MongoDB
 
 We use Redis to broker the events sent between the `orders service` and the `payments service`.
@@ -393,11 +395,14 @@ That's all there is to it! You now know how to use Redis for streaming as both a
 
 ### Additional resources
 
-- Explore streams in detail in the [Redis University course on Redis Streams](https://university.redis.com/courses/ru202/)
-- Check out our e-book on [Understanding Streams in Redis and Kafka: A Visual Guide](https://redis.com/docs/understanding-streams-in-redis-and-kafka-a-visual-guide/)
-- [CQRS](/howtos/solutions/microservices/cqrs)
-- [Query caching](/howtos/solutions/microservices/caching)
-- [API gateway caching](/howtos/solutions/microservices/api-gateway-caching)
+- Redis Streams
+  - Explore streams in detail in the [Redis University course on Redis Streams](https://university.redis.com/courses/ru202/)
+  - Check out our e-book on [Understanding Streams in Redis and Kafka: A Visual Guide](https://redis.com/docs/understanding-streams-in-redis-and-kafka-a-visual-guide/)
+- Microservices with Redis
+  - [CQRS](/howtos/solutions/microservices/cqrs)
+  - [Query caching](/howtos/solutions/microservices/caching)
+  - [API gateway caching](/howtos/solutions/microservices/api-gateway-caching)
 - [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
 - Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 - [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) : To view your Redis data or to play with raw Redis commands in the workbench
+- [Try Redis Enterprise for free](https://redis.com/try-free/)
